--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,9 @@ authors = ["Niclas Mattsson <niclas.mattsson@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
+
+[compat]
+HiGHS = "1.18.1"
